* time.c: [DOC] Clarify %Y in strftime, which can accept any digits   and will output at least 4 digits as the year. Reported by Yury   Trofimenko [Bug #8941]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@46982 b2dd03c8-39d4-4d8f-98ff-823fe69b080e